@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -202,7 +202,7 @@ public class SMTPSaslAuthenticator implements SaslAuthenticator {
 		    }
 		    if (ba == null) {
 			logger.fine("SASL: no response");
-			resp = pr.simpleCommand("*");
+			resp = pr.simpleCommand("");
 		    } else {
 			if (logger.isLoggable(Level.FINE))
 			    logger.fine("SASL response: " +
